# cookiecutter

./: .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml  pytorch-condaforge-pixi.toml  pytorch-pixi.toml
