[project]
name = "my_pkg"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_pkg"]

[tool.mypy]
# ignore_missing_imports = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "D100",
    "E501",
    "D211",
    "D212",
    "ANN001",
    "ANN003",
    "ERA001",
    "PD901",
    "S101",
    "T201",
    "PLR0913",
    "INP001",
    "N803",
    "N806",
    "ANN",
    "D",
    "FA",
    "ISC001",
    "COM812",
]
line-length = 99
